--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "https://github.com/annotorious/annotorious-plugin-tools/issues"
   },
   "scripts": {
-    "start": "vite",
+    "start": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
-    "@tsconfig/svelte": "^5.0.4",
+    "@tsconfig/svelte": "^5.0.5",
     "openseadragon": "^5.0.1",
     "svelte": "^4.2.20",
     "svelte-preprocess": "^6.0.3",
@@ -44,7 +44,7 @@
     "vite-plugin-dts": "^4.5.4"
   },
   "peerDependencies": {
-    "@annotorious/annotorious": "^3.6.12",
-    "@annotorious/openseadragon": "^3.6.12"
+    "@annotorious/annotorious": "^3.7.2",
+    "@annotorious/openseadragon": "^3.7.2"
   }
 }
